unpackaged/main/default/objects/Activity/fields/Attendees_Roles__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Roles__c</fullName>
    <label>Attendees/Roles</label>
    <type>TextArea</type>
</CustomField>