unpackaged/main/default/objects/Activity/fields/ByPass_Validation__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ByPass Validation rule when Task&#39;s Status is updated from Process Builder</description>
    <label>ByPass Validation</label>
    <type>Checkbox</type>
</CustomField>